# zi-audio-review

./: package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  scanner.rs
src-tauri/src/commands/: library.rs  mod.rs  playlists.rs  tags.rs  tracks.rs
src-tauri/src/db/: mod.rs  schema.rs
src/components/Player/: AudioElement.tsx  Player.tsx
src/components/SearchBar/: SearchBar.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Tags/: TagFilterBar.tsx  TrackTagEditor.tsx
src/components/TrackList/: TrackList.tsx  columns.tsx
src/lib/: tagColor.ts  tauri.ts
src/store/: useAppStore.ts
src/types/: index.ts
