[package]
name = "zi-audio-review"
version = "0.1.0"
description = "Audio review tool for music production output"
authors = ["Ian Zieg"]
edition = "2021"

[lib]
name = "zi_audio_review_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.34"

blake3 = "1"
lofty = "0.24"
walkdir = "2"

thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

